Make complete status toggleable

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,6 @@
     <button type="button" id="submit">submit</button>
   </form>
   <button id="remove">remove</button>
-
+  <button id="complete">complete</button>
 </body>
 </html>
