display project content in table

--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,6 @@
   </form>
   <button id="remove">remove</button>
   <button id="complete">complete</button>
+  <div id="content"></div>
 </body>
 </html>
