Add functionality to create different projects

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <form action="">
+    <label for="project"></label>
+    <select id="project"></select>
     <label for="title">Task:</label>
     <input type="text" id="title" required>
     <label for="description">Description:</label>
@@ -23,8 +25,7 @@
     <input type="text" id="notes">
     <button type="button" id="submit">submit</button>
   </form>
-  <button id="remove">remove</button>
-  <button id="complete">complete</button>
+  <button id="create-project">Create Project</button>
   <div id="content"></div>
 </body>
 </html>
