--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <label for="description">Description:</label>
     <input type="text" id="description">
     <label for="date">Complete by:</label>
-    <input type="date" id="date">
+    <input type="datetime-local" id="date">
     <label for="priority">Priority:</label>
     <select id="priority">
       <option value="low" selected>Low</option>
