Add basic styling

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
   <title>ToDo List</title>
 </head>
 <body>
+  <button id="create-project">Create Project</button>
   <form action="">
-    <label for="project"></label>
+    <label for="project">Project:</label>
     <select id="project"></select>
     <label for="title">Task:</label>
     <input type="text" id="title" required>
@@ -21,9 +22,8 @@
       <option value="medium">Medium</option>
       <option value="high">High</option>
     </select>
-    <button type="button" id="submit">submit</button>
+    <button type="button" id="submit">Create Task</button>
   </form>
-  <button id="create-project">Create Project</button>
   <div id="content"></div>
 </body>
 </html>
